--- a/js/regex/regex.html
+++ b/js/regex/regex.html
@@ -30,6 +30,7 @@
   document.log('"asdf".match(/s/gim): ', "asdf".match(/s/gim))
   document.log('/s/gim.test("asd"): ', /s/gim.test("asd"))
   document.log('/f/gim.test("asd"): ', /f/gim.test("asd"))
+  document.log('RegExp(/^Цвет/, "i").test("цвет "): ', RegExp(/^Цвет/, "i").test("цвет "))
   var versions = [
     '.',
     'a',
