--- a/bower/all.html
+++ b/bower/all.html
@@ -1,4 +1,4 @@
-<p>Bower — пакетный менеджер для web.</p>
+<p>Bower — <a href="https://bower.io/search/" target="_blank">пакетный менеджер</a> для web.</p>
 
 <h2>Установка</h2>
 <p><code class="copyToClipboard prettyprint lang-sh">sudo npm install -g bower</code></p>
