--- a/jquery/_tasks/lazyload/lazyload.html
+++ b/jquery/_tasks/lazyload/lazyload.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
 </head>
+
 <body>
-  <img src="../../">
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <div><img class="lazyload" src="../../../theme/images/800-600-nature.jpg"></div>
+  <script type="text/javascript" src="../../../theme/bower/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../theme/bower/jquery_lazyload/jquery.lazyload.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+      lazyload();
+    });
+  </script>
 </body>
+
 </html>
