--- a/rails/market/doc.html
+++ b/rails/market/doc.html
@@ -26,3 +26,9 @@ CreateStrictColorConstant.new.process!
   <li>с настройками в файле <code class="copyToClipboard">app/logic/concern/scopes/obmen/config.rb</code></li>
   <li>основные методы в файле <code class="copyToClipboard">app/logic/concern/scopes/obmen/methods.rb</code></li>
 </ul>
+
+<h2>nicks</h2>
+<ul>
+  <li><i class="copyToClipboard">config/initializers/_app_nicks.rb</i></li>
+  <li><i class="copyToClipboard">framework/_/nicks/=domain/=market.rb</i></li>
+</ul>
