--- a/yarn/all.html
+++ b/yarn/all.html
@@ -3,11 +3,13 @@
 
 
 <h2>Настройки</h2>
-Кастомизация вендора: в файле <i>.yarnrc</i>:
+<p>Кастомизация вендора: в файле <i>.yarnrc</i>:</p>
 <pre>
 --modules-folder theme/yarn
 </pre>
-
+<p><strong>Прокси:</strong></p>
+<p><code class="copyToClipboard">yarn config set https-proxy http://proxy.newstar.ru:3128</code></p>
+<p><code class="copyToClipboard">yarn config delete proxy</code></p>
 
 <h2>Команды</h2>
 <p><code>yarn init</code> старт нового проекта.</p>
