--- a/rails/all.html
+++ b/rails/all.html
@@ -122,6 +122,7 @@ end
 </pre>
 
 <h2>Миграции</h2>
+<h3>Команды</h3>
 <p><code>rails generate migration AddColumnIsHasImgToMarketProductBrands</code> — создать миграцию</p>
 <pre class="prettyprint lang-ruby">
 class AddColumnIsHasImgToMarketProductBrands < ActiveRecord::Migration[5.0]
@@ -131,6 +132,16 @@ class AddColumnIsHasImgToMarketProductBrands < ActiveRecord::Migration[5.0]
 end
 </pre>
 <p><code class="copyToClipboard">rails db:migrate</code></p>
+<p><code class="copyToClipboard">rails db:rollback</code></p>
+<h3>Примеры миграций</h3>
+<pre class="prettyprint lang-ruby">
+# rails generate migration AddColumnIsHasImgToMarketProductBrands
+class AddColumnIsHasImgToMarketProductBrands < ActiveRecord::Migration[5.0]
+  def change
+    add_column :market_product_brands, :is_has_img, :boolean, null: false, default: false
+  end
+end
+</pre>
 <h3>Экспорт/импорт схемы</h3>
 <p>Настройка экспорта схемы в файле <code class="copyToClipboard">config/environments/development.rb</code>:</p>
 <pre class="prettyprint lang-ruby">
