--- a/js/url/url.html
+++ b/js/url/url.html
@@ -2,22 +2,43 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+</head>
+<body>
+  <pre>
+
+window.location.[...]
+
+http://example.org:8888/foo/bar/baz.html?q=quux#bang
+│ href                                             │
+└──────────────────────────────────────────────────┘
+│   │ protocol                                      
+└───┘                                               
+       └──────────────┘└───────────────┘└─────┘└───┘
+        host            pathname         search hash
+       └─────────┘└───┘                             
+        hostname   port                             
+
+  </pre>
+  <script type="text/javascript" src="../../js/_libs/lib.js"></script>
   <script type="text/javascript">
 
     var encode = encodeURIComponent('zenonline.ru/cgi-bin/articles/client.cgi?action=load_articleslist&amp;phil_id=1&amp;year=2011&amp;month=9')
     var decode = decodeURIComponent('zenonline.ru%2Fcgi-bin%2Farticles%2Fclient.cgi%3Faction%3Dload_articleslist%26amp%3Bphil_id%3D1%26amp%3Byear%3D2011%26amp%3Bmonth%3D9')
 
-    console.log('encode: ', encode)
-    console.log('decode: ', decode)
+    document.log('encode: ', encode)
+    document.log('decode: ', decode)
 
-    console.log('window.location.href: ', window.location.href)
-    console.log('window.location.pathname: ', window.location.pathname)
+    document.log('')
+    document.log('window.location.href: ', window.location.href)
+    document.log('window.location.protocol: ', window.location.protocol)
+    document.log('window.location.host: ', window.location.host)
+    document.log('window.location.hostname: ', window.location.hostname)
+    document.log('window.location.port: ', window.location.port)
+    document.log('window.location.pathname: ', window.location.pathname)
+    document.log('window.location.search: ', window.location.search)
+    document.log('window.location.hash: ', window.location.hash)
 
   </script>
-</head>
-<body>
-  
+
 </body>
 </html>
-
