--- a/js/_tasks/videopl/videopl.html
+++ b/js/_tasks/videopl/videopl.html
@@ -150,7 +150,8 @@ $slider-bg-color: lighten($primary-background-color, 33%);
     <!-- <source src="https://vjs.zencdn.net/v/oceans.webm" type='video/webm' /> -->
     <!-- <source src="NY3.mp4" type='video/mp4' /> -->
     <!-- <source src="https://sign-forum.ru/upload/private/1.mp4" type='video/mp4' /> -->
-    <source src="https://sign-forum.ru/upload/private/NY3.mp4" type='video/mp4' />
+    <source src="http://tutor.newstar.ru/video/academy.mp4" type='video/mp4' />
+    <!-- <source src="https://sign-forum.ru/upload/private/NY3.mp4" type='video/mp4' /> -->
     <!-- <source src="" type='video/webm' /> -->
   </video>
 
