--- a/composer/all.html
+++ b/composer/all.html
@@ -86,6 +86,7 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 <p>Комитимм в репозиторий, например, на GitHub.</p>
 <p>В настройках репозитория (на GitHub) в разделе <q>Integrations &amp; services</q> добавляем сервис <q>Packagist</q>.</p>
 <p>Далее в <a href="https://packagist.org/packages/submit">https://packagist.org/packages/submit</a> указываем ссылку на репозиторий.</p>
+<p>Обязательно на гитхабе кликнуть <q>Test servise</q> в настройках сервиса Packagist.</p>
 <h3>Добавление пакета</h3>
 <pre>composer require twbs/bootstrap
 composer require twbs/bootstrap:3.3.5
