--- a/git/all.html
+++ b/git/all.html
@@ -162,6 +162,8 @@ git config --global alias.hist 'log --graph --pretty=format:"%Cred%h%Creset -%C(
 <p>— создать метку tag для текущего состояния (на текущей ветке) с именем tagname.</p>
 <pre>$ git tag -d tagname</pre>
 <p>— удалить метку tag с именем tagname</p>
+<p><code class="copyToClipboard">git push origin tag_name</code> — To push a single tag</p>
+<p><code class="copyToClipboard">git push --tags</code> — push all tags (not recommended)</p>
 <h2>Настройки</h2>
 <h3>Origin репозиторий без ssl сертификата (<code>unable to access '...': server certificate verification failed.</code>)</h3>
 <p><code>git init</code> (т.к. это настройка репы:)</p>
