--- a/composer/all.html
+++ b/composer/all.html
@@ -38,7 +38,7 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 <h2>Использование</h2>
 <p>Собственно чтобы использовать пакеты затянутые Composer, необходимо подключить файл <var>autoload.php</var> <code class="prettyprint lang-sh copyToClipboard">require_once "vendor/autoload.php";</code>.</p>
 <h3>Команды</h3>
-<h4>show</h4>
+<p>Поиск необходимого пакета тут: <a href="https://packagist.org" target="_b">packagist.org</a>.</p>
 <p><code class="prettyprint lang-sh copyToClipboard">composer validate</code> - проверить composer.json</p>
 <p><code class="prettyprint lang-sh copyToClipboard">composer show zlatov/sql</code> - информация об установленном пакете</p>
 <p><code class="prettyprint lang-sh copyToClipboard">composer require zlatov/tree</code> - подключить пакет</p>
