--- a/composer/all.html
+++ b/composer/all.html
@@ -46,9 +46,11 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 <p>Запуск composer install сделает следующее:</p>
 <ul>
 	<li>Проверит существует ли composer.lock файл</li>
-	<li>Если его нет, то выполнит composer update и создаст его</li>
 	<li>Если файл уже существует, то установит указанные версии пакетов из lock файла</li>
+    <li>Если его нет, то выполнит composer update и создаст его</li>
 </ul>
+<p>При приёме версии приложения мы не должны изменять его зависимости, а должны устанавить версии пакетов идентичные версиям у передававшего программиста. То есть запустить <code>composer install</code> который будет считывать из файла composer.lock (блокированные версии) и ничего не менять в vendor.</p>
+<p>Таким образом файл composer.lock необходимо включать в репозиторий приложения.</p>
 
 <p>Запуск composer update выполнит:</p>
 <ul>
