--- a/apache/all.html
+++ b/apache/all.html
@@ -8,7 +8,7 @@ sudo apt-get install apache2
 <h2>Модули и нстройки</h2>
 <h3>Где логи и настройки</h3>
 <p><strong>Настройки</strong></p>
-<p><code>/etc/apache2/apache2.conf</code></p>
+<p><code class="copyToClipboard">/etc/apache2/apache2.conf</code></p>
 <p><code>/etc/apache2/sites-available/*.conf</code> файлы настроек виртуальных хостов</p>
 <p><strong>Логи</strong></p>
 <p><code>/var/log/apache2/access.log</code></p>
