--- a/jstree/all.html
+++ b/jstree/all.html
@@ -101,6 +101,47 @@ console.log(tree.jstree(true).get_node('ajson6'))
 </pre>
 <div id="example4"></div>
 
+<h3>Изменить данные</h3>
+<pre class="prettyprint lang-js eval_js">
+	$('#example_change_data').jstree({
+    data_custom: {
+      json: [
+        {id: '1', data: { id: '1'}, text: '1', parent: '#'},
+        {id: '2', data: { id: '2'}, text: '2', parent: '1'},
+        {id: '3', data: { id: '3'}, text: '3', parent: '#', state: {opened: true}},
+        {id: '4', data: { id: '4'}, text: '4', parent: '3', state: {opened: true}},
+        {id: '5', data: { id: '5'}, text: '5', parent: '3'},
+        {id: '6', data: { id: '6'}, text: '6', parent: '4'},
+        {id: '7', data: { id: '7'}, text: '7', parent: '#', state: {opened: true}},
+        {id: '8', data: { id: '8'}, text: '8', parent: '7'},
+        {id: '9', data: { id: '9'}, text: '9', parent: '7'}
+      ]
+    },
+    core: {
+      data: function (node, callback) {
+        // console.log('this: ', this)
+        // console.log('node: ', node)
+        // console.log('callback: ', callback)
+        var data = this.settings.data_custom.json
+        if (node.id === "#") {
+          callback.call(this, data)
+        } else {
+          callback.call(this, data.filter(e=>{return e.parent === node.id}))
+        }
+      }
+    }
+	})
+</pre>
+<p><code class="eval_js">console.log(a = $('#example_change_data').jstree(true).get_node('4'))</code> взять ноду</p>
+<p><code class="eval_js">a.text = 'four'; a.data.id=44;</code></p>
+<p><code class="eval_js">console.log(a)</code> показать данные ноды</p>
+<p>обновить данные ноды:</p>
+<pre class="eval_js">
+  $('#example_change_data').jstree(true).redraw_node('4') // without childrens, work!
+  // $('#example_change_data').jstree(true).redraw_node('7', true) // with childrens, work!
+</pre>
+
+<div id="example_change_data"></div>
 
 <h3>Предок</h3>
 <pre class="prettyprint lang-js eval_js">
