--- a/html/datetime/datetime.html
+++ b/html/datetime/datetime.html
@@ -7,6 +7,8 @@
  <body>
   <form>
    <p>Время создания публикации</p>
+   <p><input type="date" name="bday" max="1979-12-31"></p>
+   <p><input type="date" name="bday" min="2000-01-02"></p>
    <p><input type="time" name="time"></p>
    <p><input type="time" name="time" value="21:30"></p>
    <p><input type="datetime-local" name="created"></p>
