--- a/css/_doc/index.html
+++ b/css/_doc/index.html
@@ -244,7 +244,7 @@
 <h2>Псевдоклассы</h2>
 <h3>На основе состояния</h3>
 <ul>
-  <li><a href="Псевдоклассы/На основе состояния.html#" title="Определяет стиль активного элемента">:active</a></li>
+  <li><a title="Определяет стиль активного элемента">:active</a></li>
   <li><a title="Применяется к ссылкам, уже посещённым пользователем, и задаёт для них стилевое оформление">:visited</a></li>
 </ul>
 <h3>На основе нумерации</h3>
