--- a/rails/activerecord/update.html
+++ b/rails/activerecord/update.html
@@ -7,7 +7,12 @@
   <!--
 ┌─┬─┐│ │ │├─┼─┤│ │ │└─┴─┘
 
- Method             Uses Default Accessor Saved to Database Validations Callbacks Touches updated_at  Readonly check
+ Method             Uses Default Accessor
+                            Saved to Database
+                                  Validations
+                                        Callbacks
+                                              Touches updated_at
+                                                    Readonly check
 | attribute=       | Yes  | No  | n/a | n/a | n/a | n/a
 | write_attribute  | No   | No  | n/a | n/a | n/a | n/a
 | update_attribute | Yes  | Yes | No  | Yes | Yes | Yes
