--- a/js/all.html
+++ b/js/all.html
@@ -70,6 +70,7 @@ Object.prototype.toString.call([])           === '[object Array]'
 Object.prototype.toString.call({})           === '[object Object]'
 Object.prototype.toString.call('')           === '[object String]'
 Object.prototype.toString.call(10)           === '[object Number]'
+Object.prototype.toString.call(false)        === '[object Boolean]'
 Object.prototype.toString.call(/s/)          === '[object RegExp]'
 Object.prototype.toString.call(function(){}) === '[object Function]'
 
