--- a/js/_doc/index.html
+++ b/js/_doc/index.html
@@ -1,6 +1,20 @@
-<h2>Раздел 1</h2>
-<h3>Подраздел 1-1</h3>
-<h3>Подраздел 1-2</h3>
+<h2>КАРТА ФУНКЦИЙ</h2>
+<h3>Селекторы</h3>
+<p><strong>Базовые</strong></p>
+<ul>
+  <li><a href="" class="doc">#id</a></li>
+  <li><a href="" class="doc">.class</a></li>
+  <li><a href="" class="doc">tagName</a></li>
+  <li><a href="" class="doc">*</a></li>
+</ul>
+<h3>События</h3>
+<p><strong>Базовые</strong></p>
+<ul>
+  <li>
+    <a class="doc">.on()</a>
+  </li>
+</ul>
 <h2>Раздел 2</h2>
+<p><a class="doc">Цель 2-1</a></p>
 <h3>Подраздел 2-1</h3>
 <h2>Раздел 3</h2>
