--- a/nginx/all.html
+++ b/nginx/all.html
@@ -1,5 +1,6 @@
 <h2>Остановка, запуск, статус</h2>
-<p><code class="copyToClipboard">sudo nginx -t</code> — проверить правильность настроек перед перезапуском.</p>
+<p><code class="copyToClipboard">sudo nginx -t</code> — проверить кофигурацию.</p>
+<p><code class="copyToClipboard">sudo nginx -s reload</code> — пперезапустить конфигурационный файл без перезагрузки Nginx.</p>
 <p><code class="copyToClipboard">sudo service nginx stop</code></p>
 <p><code class="copyToClipboard">sudo service nginx start</code></p>
 <p><code class="copyToClipboard">sudo service nginx restart</code></p>
